first working version: - replaced jre-11 with jre-8 - extended Readme.md - altered launchscript